# S0008E

./: .gitignore  CMakeLists.txt  Scripting.sh  picture2.ppm
engine/MyMathLibrary/: Matrix3DHeader.h  Vector2DHeader.h  Vector3DHeader.h
engine/PathTracerIncludes/: camera.h  material.h  sphere.h
engine/render/: window.h
projects/PathTracing/: CMakeLists.txt
projects/PathTracing/code/: main.cc
projects/Scripting/: CMakeLists.txt
projects/Scripting/code/: main.cc
projects/SimpleApplication/: CMakeLists.txt
projects/SimpleApplication/code/: main.cc
projects/Skeleton/: CMakeLists.txt
projects/Skeleton/code/: NAX3parser.cc  NAX3parser.h  exampleapp.cc  exampleapp.h  main.cc  nvx2fileformatstructs.h  nvx2streamreader.cc  nvx2streamreader.h
projects/Skeleton/footman/: Footman_Mask.dds
